Lisää pohjan säätelyä

--- a/index.html
+++ b/index.html
@@ -5,77 +5,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tannerkoski Capital</title>
+    <!-- fontti -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    <!-- omat stylet -->
     <link rel="stylesheet" href="css/tyyli.css">
 </head>
 <body class="tumma">
-    <header>
-        <button id="vaalea">Vaalea</button>
-        <button id="tumma">Tumma</button>
-        <h1>Tannerkoski Capital</h1>
-
-    </header>
-    <section>
-        <h2>Palvelumme</h2>
-        <h4>Rahoitus</h4>
-        <p>Tannerkoski Capital on kotimainen, osaava, palveleva ja huolellinen tukesi rahoitusasioissa.</p>
-        <h4>Yrityskaupat</h4>
-        <p>Autamme järjestämään yrityskauppasi ammattimaisesti ja helposti.</p>
-        <h4>Talous</h4>
-        <p>Asiantuntijamme auttavat sinua kaikissa yrityksesi talouteen liittyvissä kysymyksissä.</p>     
-    </section>
-    <section>
-        <h2>Tietoa meistä</h2>
-        <p>Tannerkoski Capital Oy on kotimainen, osaava, palveleva ja huolellinen tukesi rahoitusasioissa. Etsimme puolestasi sopivat rahoittajat ja autamme materiaalien kokoamisessa hakemustasi varten sekä saatamme puolestasi rahoitushankkeen päätökseen.</p>
-        <p>Tannerkoski Capital Oy:n omistavat Jaakko ja Olli Tannerkoski, jotka ovat kokeneita ja arvostettuja yritysrahoituksen ammattilaisia. He ovat toimineet alalla pitkään niin rahoitusyhtiön omistajina kuin operatiivisissakin rooleissa. Tannerkoski Capital Oy:n missiona on asiakasyritystensä auttaminen sopivan rahoitusmallin ja -tahon löytämisessä kaikkiin tilanteisiin.</p>
-        <p>Osaava rahoituksen asiantuntija onnistuu usein löytämään parhaat tahot tukemaan asiakkaidensa toimintaa, samalla kun yritys itse pystyy keskittymään omaan ydinosaamiseensa.</p>
-        <p>Tannerkoski Capital Oy:n päämiesverkostossa on kymmeniä rahoitusyhtiötä Suomessa ja EU-alueella sekä suurimmat suomalaiset pankit. Meillä on suora yhteys yhteiskunnallisten ja valtiollisten rahoituslaitosten kanssa. Lisäksi selvitämme mahdollisuuden Euroopan Investointipankin sekä EU:n muiden instituuttien avustuksiin ja lainatakauksiin.</p>
-        <p><a href="#yhteystiedot">Ota yhteyttä</a> ja tule tapaamaan meitä! Autamme sinua mielellämme.</p>
-    </section>
-    <section>
-        <h2>Lupauksemme</h2>
-        <h4>Ammattimaisuus</h4>
-        <p>Kiinnitämme erityistä huomioita toimintamme ammattimaisuuteen. Rahoituslaitokset ja valtiolliset takaustoiminnot arvostavat ammattimaista lähestymistapaa. Emme toimi kiireessä emmekä huolimattomasti. Edustamme toimeksiannoissamme teitä.</p>
-        <h4>Asiakaspalvelu</h4>
-        <p>Henkilökuntamme on olemassa sinua varten. Tehtävämme on laatia tarvittavat asiakirjat ja kerätä materiaali mahdollisimman ripeästi, mutta kuitenkin ammattimaisesti.</p>
-        <h4>Samassa veneessä</h4>
-        <p>Istumme asiakkaidemme kanssa samalla puolella pöytää. Yritämme yhdessä löytää parhaan ja ripeimmän mahdollisen rahoitusratkaisun.</p>
-        <a href="tarina.html">Lisää tietoa meistä</a>
-    </section>
-    <Section id="yhteystiedot">
-        <h2>Ota yhteyttä</h2>
-        <h4>Osoitteemme:</h4>
-        <p>Miestentie 5-9,
-            02150 Espoo</p>
-        <a href="https://goo.gl/maps/6SdTJu8F11DP4qi96">Näytä kartalta</a>
-        <h4>Olemmme tavoitavissa:</h4>
-        <p>Ma – Pe, 8:00-18:00</p>
-        <h4>Myös puhelimitse:</h4>
-        <p>+ 358 46 9223595</p>
-        <h3>Haluatko meidän ottavan yhteyttä, jätä viesti.</h3>
-        <label for="nimi">Nimi:</label>
-        <input type="text" name="nimi" id="nimi">
-        <label for="puhelin">Puhelinnumero:</label>
-        <input type="tel" id="puhelin" name="puhelin" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
-        <label for="sähköposti">Sähköposti:</label>
-        <input type="email" name="sähköposti" id="sähköposti">
-        <label for="viesti">Jätä viesti:</label>
-        <textarea name="viesti" id="viesti" cols="30" rows="10"></textarea>
-    </Section>
-    <footer>
-        <h5>Tannerkoski Capital</h5>
-        <p>logo</p>
-        <a href="https://www.linkedin.com/company/tannerkoski-capital/about/">Linkedin</a>
-        <h5>Yhteystiedot</h5>
-        <p>Osoite:</p>
-        <p>Miestentie 5-9, 02150 Espoo</p>
-        <p>Puhelin:</p>
-        <p>+ 358 46 9223595</p>
-        <p>Avoinna:</p>
-        <p>Ma – Pe 8:00-18:00</p>
-        <p>Email</p>
-        <p>info@tannerkoski.fi</p>
-    </footer>
-
+<div class="container">
+            <header>
+                <button id="vaalea">Vaalea</button>
+                
+                <h1>Tannerkoski Capital</h1>
+                <button id="tumma">Tumma</button>
+            </header>
+            <section>
+                <h2>Palvelumme</h2>
+                <i class="fas fa-university"></i>
+                <h4>Rahoitus</h4>
+                <p>Tannerkoski Capital on kotimainen, osaava, palveleva ja huolellinen tukesi rahoitusasioissa.</p>
+                <i class="far fa-handshake"></i>
+                <h4>Yrityskaupat</h4>
+                <p>Autamme järjestämään yrityskauppasi ammattimaisesti ja helposti.</p>
+                <i class="fas fa-euro-sign"></i>
+                <h4>Talous</h4>
+                <p>Asiantuntijamme auttavat sinua kaikissa yrityksesi talouteen liittyvissä kysymyksissä.</p>     
+            </section>
+            <section>
+                <h2>Tietoa meistä</h2>
+                <p>Tannerkoski Capital Oy on kotimainen, osaava, palveleva ja huolellinen tukesi rahoitusasioissa. Etsimme puolestasi sopivat rahoittajat ja autamme materiaalien kokoamisessa hakemustasi varten sekä saatamme puolestasi rahoitushankkeen päätökseen.</p>
+                <p>Tannerkoski Capital Oy:n omistavat Jaakko ja Olli Tannerkoski, jotka ovat kokeneita ja arvostettuja yritysrahoituksen ammattilaisia. He ovat toimineet alalla pitkään niin rahoitusyhtiön omistajina kuin operatiivisissakin rooleissa. Tannerkoski Capital Oy:n missiona on asiakasyritystensä auttaminen sopivan rahoitusmallin ja -tahon löytämisessä kaikkiin tilanteisiin.</p>
+                <p>Osaava rahoituksen asiantuntija onnistuu usein löytämään parhaat tahot tukemaan asiakkaidensa toimintaa, samalla kun yritys itse pystyy keskittymään omaan ydinosaamiseensa.</p>
+                <p>Tannerkoski Capital Oy:n päämiesverkostossa on kymmeniä rahoitusyhtiötä Suomessa ja EU-alueella sekä suurimmat suomalaiset pankit. Meillä on suora yhteys yhteiskunnallisten ja valtiollisten rahoituslaitosten kanssa. Lisäksi selvitämme mahdollisuuden Euroopan Investointipankin sekä EU:n muiden instituuttien avustuksiin ja lainatakauksiin.</p>
+                <p><a href="#yhteystiedot">Ota yhteyttä</a> ja tule tapaamaan meitä! Autamme sinua mielellämme.</p>
+            </section>
+            <section>
+                <h2>Lupauksemme</h2>
+                <h4>Ammattimaisuus</h4>
+                <p>Kiinnitämme erityistä huomioita toimintamme ammattimaisuuteen. Rahoituslaitokset ja valtiolliset takaustoiminnot arvostavat ammattimaista lähestymistapaa. Emme toimi kiireessä emmekä huolimattomasti. Edustamme toimeksiannoissamme teitä.</p>
+                <h4>Asiakaspalvelu</h4>
+                <p>Henkilökuntamme on olemassa sinua varten. Tehtävämme on laatia tarvittavat asiakirjat ja kerätä materiaali mahdollisimman ripeästi, mutta kuitenkin ammattimaisesti.</p>
+                <h4>Samassa veneessä</h4>
+                <p>Istumme asiakkaidemme kanssa samalla puolella pöytää. Yritämme yhdessä löytää parhaan ja ripeimmän mahdollisen rahoitusratkaisun.</p>
+                <a href="tarina.html">Lisää tietoa meistä</a>
+            </section>
+            <Section id="yhteystiedot">
+                <h2>Ota yhteyttä</h2>
+                <h4>Osoitteemme:</h4>
+                <p>Miestentie 5-9,
+                    02150 Espoo</p>
+                <a href="https://goo.gl/maps/6SdTJu8F11DP4qi96">Näytä kartalta</a>
+                <h4>Olemmme tavoitavissa:</h4>
+                <p>Ma – Pe, 8:00-18:00</p>
+                <h4>Myös puhelimitse:</h4>
+                <p>+ 358 46 9223595</p>
+                <h3>Haluatko meidän ottavan yhteyttä, jätä viesti.</h3>
+                <label for="nimi">Nimi:</label><br>
+                <input type="text" name="nimi" id="nimi"><br>
+                <label for="puhelin">Puhelinnumero:</label><br>
+                <input type="tel" id="puhelin" name="puhelin" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"> <br>
+                <label for="sähköposti">Sähköposti:</label> <br>
+                <input type="email" name="sähköposti" id="sähköposti"> <br>
+                <label for="viesti">Jätä viesti:</label> <br>
+                <textarea name="viesti" id="viesti" cols="30" rows="10"></textarea>
+            </Section>
+            <footer>
+                <h5>Tannerkoski Capital</h5>
+                <p>logo</p>
+                <a href="https://www.linkedin.com/company/tannerkoski-capital/about/"><i class="fab fa-linkedin"></i></a>
+                <h5>Yhteystiedot</h5>
+                <p>Osoite:</p>
+                <p>Miestentie 5-9, 02150 Espoo</p>
+                <p>Puhelin:</p>
+                <p>+ 358 46 9223595</p>
+                <p>Avoinna:</p>
+                <p>Ma – Pe 8:00-18:00</p>
+                <p>Email</p>
+                <p>info@tannerkoski.fi</p>
+            </footer>
+</div>
     <script src="javascripts/main.js"></script>
 </body>
 </html>
