--- a/tarina.html
+++ b/tarina.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarinamme</title>
+    <!-- fontti -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    <!-- omat stylet -->
     <link rel="stylesheet" href="css/tyyli.css">
 </head>
 <body>
@@ -18,45 +24,45 @@
         <p>Toimitusjohtaja</p>
         <p>+358 400 199 940</p>
         <p>Jaakko@tannerkoski.fi</p>
-        <a href="https://www.linkedin.com/in/jaakko-tannerkoski-42b2014b/">linkedin</a>
+        <a href="https://www.linkedin.com/in/jaakko-tannerkoski-42b2014b/"><i class="fab fa-linkedin"></i></a>
         <h5>Olli Tannerkoski</h5>
         <p>Hallituksen pj.</p>
         <p>+358 400 199 942</p>
         <p>Olli@tannerkoski.fi</p>
-        <a href="https://www.linkedin.com/in/olli-tannerkoski-3221b74/">linkedin</a>
+        <a href="https://www.linkedin.com/in/olli-tannerkoski-3221b74/"><i class="fab fa-linkedin"></i>n</a>
         <h5>Taina Bunsdorff</h5>
         <p>Back office</p>
         <p>+358 456 521 012</p>
         <p>Taina.Bonsdorff@tannerkoski.fi</p>
-        <a href="https://www.linkedin.com/in/taina-bonsdorff-tannerkoski-0ba1b279/">linkedin</a>
+        <a href="https://www.linkedin.com/in/taina-bonsdorff-tannerkoski-0ba1b279/"><i class="fab fa-linkedin"></i></a>
         <h4>Myynti</h4>
         <h5>Robin Nygård</h5>
         <p>Partner, coo</p>
         <p>+358 45 104 3800</p>
         <p>Robin.Nygard@tannerkoski.fi</p>
-        <a href="https://www.linkedin.com/in/robin-nyg%C3%A5rd-6aa48498/">linkedin</a>
+        <a href="https://www.linkedin.com/in/robin-nyg%C3%A5rd-6aa48498/"><i class="fab fa-linkedin"></i></a>
         <h5>Marko Juhanen</h5>
         <p>Partner / Asiakashankinta</p>
         <p>+358 50 461 8566</p>
         <p>Marko.Juhanen@tannerkoski.fi</p>
-        <a href="https://www.linkedin.com/in/marko-juhanen-28336a162/">linkedin</a>
+        <a href="https://www.linkedin.com/in/marko-juhanen-28336a162/"><i class="fab fa-linkedin"></i></a>
         <h5>Mikko Smalén</h5>
         <p>Partner</p>
         <p>+358 40 530 0411</p>
         <p>Mikko.Smalen@tannerkoski.fi</p>
-        <a href="https://www.linkedin.com/in/mikko-smal%C3%A9n-954244115/">linkedin</a>
+        <a href="https://www.linkedin.com/in/mikko-smal%C3%A9n-954244115/"><i class="fab fa-linkedin"></i></a>
         <h5>Jenni Marttila</h5>
         <p>Junior partner</p>
         <p>+358 40 559 2881</p>
         <p>Jenni@tannerkoski.fi</p>
-        <a href="https://www.linkedin.com/in/jenni-marttila-279b62138/">linkedin</a>
+        <a href="https://www.linkedin.com/in/jenni-marttila-279b62138/"><i class="fab fa-linkedin"></i></a>
         <button>
         <a href="/index.html">Palaa takaisin</a></button>
     </section>
     <footer>
         <h5>Tannerkoski Capital</h5>
         <p>logo</p>
-        <a href="https://www.linkedin.com/company/tannerkoski-capital/about/">Linkedin</a>
+        <a href="https://www.linkedin.com/company/tannerkoski-capital/about/"><i class="fab fa-linkedin"></i></a>
         <h5>Yhteystiedot</h5>
         <p>Osoite:</p>
         <p>Miestentie 5-9, 02150 Espoo</p>
