lähes mobiili tehty

--- a/tarina.html
+++ b/tarina.html
@@ -39,7 +39,9 @@
     <p>Tannerkoski Capital Oy:n tarina alkoi, kun yrityksen perustajajäsenet huomasivat etteivät pk-yritykset pysty löytämään parhaita rahoitusmalleja/ratkaisuja toiminnalleen. Syitä tähän on monia, mutta suurimpana esteenä ovat pk-yritysten osaamattomuus ja kyky pysyä jatkuvassa murroksessa olevan rahoitusmarkkinan rahoitusmahdollisuuksien perässä. Kiristyneen lainsäädännön ja pankkisääntelyn kautta pk-yritysten on entistä vaikeampi hakea rahoitusta toiminnalleen liikepankeilta, joissa usein vaaditaan niin sanottuja ylivakuuksia lainojen vakuudeksi johtuen tiukentuneista vakavaraisuussäännöksistä liikepankkeja kohtaan.</p>
     <p>Rahoitusinstrumenttien määrä kasvaa jatkuvasti ja lisäksi on uusia rahoitusmalleja tulee markkinoille lähes tulkoon päivittäin. Ei ihme, että pk-yritysten on vaikea pysyä ajan tasalla kaikista mahdollisista rahoitusinstrumentaista, saati sitten valita paras mahdollinen rahoitusmalli juuri oman yrityksen tarpeeseen. Tannerkoski Capital Oy onkin syntynyt auttamaan pk-yrityksiä ja tehostamaan rahoitusmarkkinoita.</p>
     </section>
+   <!--  tiimi -->
     <section>
+        <div class="tiimi">
         <h2>Tiimi</h2>
         <h4>Hallinto</h4>
         <h5>Jaakko Tannerkoski</h5>
@@ -47,57 +49,64 @@
         <p>+358 400 199 940</p>
         <p>Jaakko@tannerkoski.fi</p>
         <a href="https://www.linkedin.com/in/jaakko-tannerkoski-42b2014b/"><i class="fab fa-linkedin"></i></a>
+        <hr>
         <h5>Olli Tannerkoski</h5>
         <p>Hallituksen pj.</p>
         <p>+358 400 199 942</p>
         <p>Olli@tannerkoski.fi</p>
-        <a href="https://www.linkedin.com/in/olli-tannerkoski-3221b74/"><i class="fab fa-linkedin"></i>n</a>
+        <a href="https://www.linkedin.com/in/olli-tannerkoski-3221b74/"><i class="fab fa-linkedin"></i></a>
+        <hr>
         <h5>Taina Bunsdorff</h5>
         <p>Back office</p>
         <p>+358 456 521 012</p>
         <p>Taina.Bonsdorff@tannerkoski.fi</p>
-        <a href="https://www.linkedin.com/in/taina-bonsdorff-tannerkoski-0ba1b279/"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/taina-bonsdorff-tannerkoski-0ba1b279/"><i class="fab fa-linkedin"></i></a><hr class="h2">
+
         <h4>Myynti</h4>
         <h5>Robin Nygård</h5>
         <p>Partner, coo</p>
         <p>+358 45 104 3800</p>
         <p>Robin.Nygard@tannerkoski.fi</p>
         <a href="https://www.linkedin.com/in/robin-nyg%C3%A5rd-6aa48498/"><i class="fab fa-linkedin"></i></a>
+        <hr>
         <h5>Marko Juhanen</h5>
         <p>Partner / Asiakashankinta</p>
         <p>+358 50 461 8566</p>
         <p>Marko.Juhanen@tannerkoski.fi</p>
         <a href="https://www.linkedin.com/in/marko-juhanen-28336a162/"><i class="fab fa-linkedin"></i></a>
+        <hr>
         <h5>Mikko Smalén</h5>
         <p>Partner</p>
         <p>+358 40 530 0411</p>
         <p>Mikko.Smalen@tannerkoski.fi</p>
         <a href="https://www.linkedin.com/in/mikko-smal%C3%A9n-954244115/"><i class="fab fa-linkedin"></i></a>
+        <hr>
         <h5>Jenni Marttila</h5>
         <p>Junior partner</p>
         <p>+358 40 559 2881</p>
         <p>Jenni@tannerkoski.fi</p>
         <a href="https://www.linkedin.com/in/jenni-marttila-279b62138/"><i class="fab fa-linkedin"></i></a><br>
-        
+        <hr class="h2" > 
+    </div>
         <a class="btn btn-warning" href="/index.html">Palaa takaisin</a>
     </section>
    
     <footer>
         <h5>Tannerkoski Capital</h5>
-        <p>logo</p>
+        <img src="img/tc_logo60.png" alt="logo"><br>
         <a href="https://www.linkedin.com/company/tannerkoski-capital/about/"><i class="fab fa-linkedin"></i></a>
         <h5>Yhteystiedot</h5>
-        <p>Osoite:</p>
+        <p><strong>Osoite:</strong></p>
         <p>Miestentie 5-9, 02150 Espoo</p>
-        <p>Puhelin:</p>
+        <p><strong>Puhelin:</strong></p>
         <p>+ 358 46 9223595</p>
-        <p>Avoinna:</p>
+        <p><strong>Avoinna:</strong></p>
         <p>Ma – Pe 8:00-18:00</p>
-        <p>Email</p>
+        <p><strong>Sähköposti:</strong></p>
         <p>info@tannerkoski.fi</p>
     </footer>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="javascripts/darkmode.js"></script>
+    <script src="javascripts/darkmodetwo.js"></script>
 </body>
 </html>
