--- a/tarina.html
+++ b/tarina.html
@@ -41,7 +41,7 @@
     </section>
    <!--  tiimi -->
     <section>
-        <div class="tiimi">
+        <div id="tiimi">
         <h2>Tiimi</h2>
         <h4>Hallinto</h4>
         <h5>Jaakko Tannerkoski</h5>
