--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-warning sticky-top d-none d-lg-block">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">koti<i class="fas fa-home"></i></a>
+          <a class="navbar-brand" href="index.html">koti<i class="fas fa-home"></i></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,7 +39,8 @@
                   <li><a class="dropdown-item" href="#tietoa-meistä">Tannerkoski Capital Oy</a></li>
                   <li><a class="dropdown-item" href="#lupauksemme">Arvolupauksemme</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="tarina.html">Tarinamme ja tiimi</a></li>
+                  <li><a class="dropdown-item" href="tarina.html">Tarinamme</a></li>
+                  <li><a class="dropdown-item" href="tarina.html#tiimi">Tiimi</a></li>
                 </ul>
               </li>
            
