--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h2>Tannerkoski Capital</h2>
                 <h4>Luotettava kumppanisi</h4>
                 <h4>rahoitusasioissa</h4>
-                <a class="btn btn-warning" href="#palvelumma">Tutustu palveluihimme</a>
+                <a class="btn btn-warning" href="#palvelumme">Tutustu palveluihimme</a>
             </div>
         </div>
 
