--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
         <div class="container2">
             <div class="scene"></div>
             <div class="selitys">
-                <h2>Tannerkoski Capital</h2>
-                <h4>Luotettava kumppanisi</h4>
-                <h4>rahoitusasioissa</h4>
-                <a class="btn btn-warning" href="#palvelumme">Tutustu palveluihimme</a>
+                <h2 >Tannerkoski Capital</h2>
+                <h4  >Luotettava kumppanisi</h4>
+                <h4 >rahoitusasioissa</h4>
+                <a class="btn btn-warning nappi" href="#palvelumme">Tutustu palveluihimme</a>
             </div>
         </div>
 
@@ -143,7 +143,7 @@
                 <div class="col-md-12 col-lg-6 d-none d-lg-block">
                     <img src="img/profit.jpeg" alt="profit">
                 </div>
-                    <p><a class="btn btn-warning btn-sm" href="#yhteystiedot">Ota yhteyttä</a> ja tule tapaamaan meitä! Autamme sinua mielellämme.</p>
+                    <p class="d-lg-none" ><a class="btn btn-warning btn-sm" href="#yhteystiedot">Ota yhteyttä</a> ja tule tapaamaan meitä! Autamme sinua mielellämme.</p>
                     </div>
             </div>
             </section>
@@ -160,7 +160,7 @@
                
             </div>
             </section>
-            <a class="btn btn-warning mt-3" href="tarina.html">Lisää tietoa meistä</a>
+            <a class="btn btn-warning mt-3 d-lg-none" href="tarina.html">Lisää tietoa meistä</a>
             <!-- yhteystiedot -->
             <Section >
                 <div id="yhteystiedot">
@@ -224,6 +224,7 @@
             <div class="mapouter m-auto d-none d-lg-block mt-2"><div class="gmap_canvas"><iframe width="904" height="395" id="gmap_canvas" src="https://maps.google.com/maps?q=Miestentie%205-9,%2002150%20Espoo&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com"></a><br><style>.mapouter{position:relative;text-align:right;height:395px;width:880px;}</style><a href="https://www.embedgooglemap.net">embedding google maps on website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:395px;width:904px;}</style></div></div>
 
             <footer>
+                
                 <h3 class="mb-3">Tannerkoski Capital</h3>
                 <div class="row">
                     <h5>Yhteystiedot</h5>
