--- a/tarina.html
+++ b/tarina.html
@@ -56,7 +56,8 @@
     <div class="container">
     <header id="header">
                 
-        <img src="img/tc_logo60.png" alt="logo">
+      <img class="image1" src="img/TCsvg.svg" alt="image">
+      <img class="image2 piilota" src="img/TCsvgdark.svg" alt="image">   
         <h5>Tannerkoski Capital</h5>
    
         <label class="label">
