--- a/tarina.html
+++ b/tarina.html
@@ -17,9 +17,9 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning sticky-top d-none d-lg-block">
+    <nav class="navbar navbar-expand-lg  bg-warning sticky-top d-none d-lg-block">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">koti<i class="fas fa-home"></i></a>
+          <a class="navbar-brand" href="index.html"><img src="/img/tc_logo60.png" alt="tannerkoski capital logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -54,7 +54,7 @@
         </div>
       </nav>
     <div class="container">
-    <header id="header">
+    <!-- <header id="header">
                 
       <img class="image1" src="img/TCsvg.svg" alt="image">
       <img class="image2 piilota" src="img/TCsvgdark.svg" alt="image">   
@@ -69,9 +69,9 @@
             </div>
             
           </label>   
-</header>
-
-<a class="btn btn-warning mt-5 d-lg-none" href="/index.html">Palaa takaisin</a>
+</header> -->
+<div class="scene"></div>
+<a class="btn mt-5 d-lg-none" href="/index.html">Palaa takaisin</a>
     <section>
         <div id="tarinamme">
             <div class="row">
@@ -151,7 +151,7 @@
     </div>
     </div>
 </div>
-        <a class="btn btn-warning d-lg-none" href="/index.html">Palaa takaisin</a>
+        <a class="btn d-lg-none" href="/index.html">Palaa takaisin</a>
     </section>
    
     <footer>
@@ -181,6 +181,8 @@
   </footer>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="javascripts/darkmodetwo.js"></script>
+    <script src="./javascripts/three.min.js"></script>
+    <script src="./javascripts/GLTFLoader.js"></script>
+    <script src="javascripts/main.js"></script>
 </body>
 </html>
